GNOME Bugzilla – Bug 640109
[PATCH] totem-glow-button can add extra timeouts on totem_glow_button_leave()
Last modified: 2011-01-21 11:26:06 UTC
I stole this widget for Epiphany and found that under some circumstances there were two timeouts being added, which caused one to still keep going after the widget was destroyed (it is not removed). The attached patch fixes this. The call to totem_glow_button_set_timeout doesn't do a thing. Removing it has no effects on the animation, but it prevents the double timeout scenario.
Created attachment 178888 [details] [review] browser-plugin: prevent double timeouts in totem-glow-button Bug #640109
The patch is wrong, as it wouldn't continue glowing if we were asked to glow before the button was hovered. I've fixed this differently and added an assert to avoid this situation again (adding multiple timeouts). commit dec323d0a3cd23274f05ba8b589d12a03bfb8ecf Author: Bastien Nocera <hadess@hadess.net> Date: Fri Jan 21 11:23:34 2011 +0000 browser-plugin: Fix possible warnings when destroyed Each time the widget was left, we would add a new timeout, without removing the old one. This could cause warnings once the widget was destroyed. https://bugzilla.gnome.org/show_bug.cgi?id=640109