browser-plugin: Fix possible warnings when destroyed

Each time the widget was left, we would add a new timeout, without
removing the old one. This could cause warnings once the widget
was destroyed.

https://bugzilla.gnome.org/show_bug.cgi?id=640109